<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/delete_title"
        android:layout_marginTop="28dp"
        android:layout_marginStart="28dp"
        android:text="@string/pop_up_delete_title"
        android:textColor="@color/lack"
        android:textSize="20sp"
        android:fontFamily="@font/playfairdisplaybolditalic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/delete_detail"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_title"
        android:textSize="14sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/playfairdisplaybolditalic"
        android:text="@string/pop_up_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/delete_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/delete_delete"
            android:text="@string/contact_delete"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="28dp"
            android:textSize="14sp"
            android:fontFamily="@font/playfairdisplaybolditalic"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/delete_dismiss"
            android:layout_toStartOf="@id/delete_delete"
            android:layout_marginEnd="26dp"
            android:text="@string/contact_dismiss"
            android:layout_centerInParent="true"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:fontFamily="@font/playfairdisplaybolditalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
