<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    
    <ImageView
        android:id="@+id/add_picture"
        android:contentDescription="@null"
        android:src="@drawable/btn_add_photo"
        android:scaleType="centerCrop"
        android:layout_marginTop="40dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="135dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="91dp"
        android:layout_height="91dp" />

    <LinearLayout
        android:id="@+id/name_layout"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/add_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:src="@drawable/contact"
            android:contentDescription="@null"
            android:layout_width="18dp"
            android:layout_height="18dp" />

        <EditText
            android:id="@+id/edit_name_contact"
            android:layout_marginStart="24dp"
            android:inputType="textCapWords"
            android:textSize="14sp"
            android:fontFamily="@font/playfairdisplayregular"
            android:hint="@string/edit_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:src="@drawable/email"
            android:contentDescription="@null"
            android:layout_width="18dp"
            android:layout_height="18dp" />

        <EditText
            android:id="@+id/edit_email_contact"
            android:layout_marginStart="24dp"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:fontFamily="@font/playfairdisplayregular"
            android:hint="@string/edit_email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:src="@drawable/phone"
            android:contentDescription="@null"
            android:layout_width="18dp"
            android:layout_height="18dp" />

        <EditText
            android:id="@+id/edit_phone_contact"
            android:layout_marginStart="24dp"
            android:inputType="phone"
            android:textSize="14sp"
            android:fontFamily="@font/playfairdisplayregular"
            android:hint="@string/edit_email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:text="@string/button_save"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/playfairdisplayregular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>